# rosenwald

./: .gitignore  GR_index_listes_géographiques_final.xlsx  Makefile  README.md  pyproject.toml  requirements.txt
docs/: index.html
rosenwald/: config.py  index_reader.py
rosenwald/analysis/: figures.py  load.py  run_all.py  tables.py
rosenwald/evaluation/: __init__.py  evaluate.py
rosenwald/extract/: anthropic_vlm.py  gemini.py  ocr_run.py  openai_vlm.py  pdf_to_png.py  prompts.py  providers.py  run_year.py  tesseract.py  vlm_common.py
rosenwald/postprocess/: diagnose_tsv.py  export_excel.py  fix_tsv_columns.py  merge_to_excel.py  restructure_tsv.py
rosenwald/women/: build_workbook.py  clean_workbook.py  detect.py  filter.py  names.py  sample_pages.py
src/: config.py  export_excel.py  gemini_image_extract.py  index_reader.py  pdf_to_png.py  prompts.py  run_year.py  women_filter.py
tests/: test_ablation.py  test_evaluate.py  test_providers.py  test_women.py
webapp/: generate_site.py
