[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rosenwald"
version = "0.1.0"
description = "Structured extraction of medical practitioners (esp. women) from the Guides Rosenwald (1887–1922)."
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["rosenwald", "rosenwald.extract", "rosenwald.postprocess",
            "rosenwald.women", "rosenwald.evaluation", "rosenwald.analysis"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
testpaths = ["tests"]
